Organized API and files. Abstracted player API from video API. Started on Control fading through CSS transitions.

--- a/dev/flowplayer/test.html
+++ b/dev/flowplayer/test.html
@@ -5,10 +5,13 @@
   <title>HTML5 Video Player: flowplayer</title>
 
   <!-- Include the VideoJS Library -->
-  <script src="../src/video.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../src/main.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../src/api.js" type="text/javascript" charset="utf-8"></script>
   <script src="../src/html5.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../src/flash.js" type="text/javascript" charset="utf-8"></script>
   <script src="../src/behaviors.js" type="text/javascript" charset="utf-8"></script>
   <script src="../src/lib.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../src/video-js.jquery.js" type="text/javascript" charset="utf-8"></script>
 
   <!-- <script type="text/javascript" src="flowplayer-3.2.4.min.js"></script> -->
   <script type="text/javascript" src="video-js.flowplayer.js"></script>
