--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <title>HTML5 Video Player</title>
+<script type="text/javascript">
+
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-XXXXXXX-XX']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+
+</script>
 
   <!-- Include the VideoJS Library -->
   <script src="video.js" type="text/javascript" charset="utf-8"></script>
