--- a/dev/test.html
+++ b/dev/test.html
@@ -15,7 +15,7 @@
   <!-- <script src="flowplayer/video-js.flowplayer.js" type="text/javascript" charset="utf-8"></script> -->
 
   <script type="text/javascript">
-    VideoJS.setupAllWhenReady({ controlsEnabled: false });
+    VideoJS.setupAllWhenReady();
     VideoJS.DOMReady(function(){
       // myPlayer = VideoJS.setup("example_video_1", { 
       //         // controlsHiding: true, 
