Added <param name="wmode" value="transparent" /> to all instances of <object>. This will help with flash transparency in IE and z-index

--- a/dev/map/map.html
+++ b/dev/map/map.html
@@ -67,6 +67,7 @@
       <object id="flash_fallback_1" class="vjs-flash-fallback" width="640" height="264" type="application/x-shockwave-flash"
         data="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf">
         <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.1.swf" />
+        <param name="wmode" value="transparent" />
         <param name="allowfullscreen" value="true" />
         <param name="flashvars" value='config={"playlist":["http://video-js.zencoder.com/oceans-clip.png", {"url": "http://video-js.zencoder.com/oceans-clip.mp4","autoPlay":false,"autoBuffering":true}]}' />
         <!-- Image Fallback. Typically the same as the poster image. -->
