--- a/dev/compare/compare.html
+++ b/dev/compare/compare.html
@@ -43,6 +43,7 @@
 
 
   <script src="../src/tech/h5swf.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../src/tech/youtube.js" type="text/javascript" charset="utf-8"></script>
 
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
@@ -55,22 +56,26 @@
 <body>
 
   <table border="0" cellspacing="5" cellpadding="5">
-    <tr><th colspan="2">HTML5</th><th colspan="2">H5Swf</th><th colspan="2">Flowplayer</th></tr>
+    <tr><th colspan="2">HTML5</th><th colspan="2">H5Swf</th><th colspan="2">YouTube</th></tr>
     <tr>
       <td colspan="2">
-        <video id="vid1" class="video-js vjs-default-skin" preload="auto" width="480" height="198">
+        <video id="vid1" class="video-js vjs-default-skin" preload="auto" width="480" height="198"
+          poster="http://video-js.zencoder.com/oceans-clip.png"
+          >
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
           <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
         </video>
       </td>
       <td colspan="2">
-        <video id="vid2" class="video-js vjs-default-skin" preload="auto" width="480" height="198">
+        <video id="vid2" class="video-js vjs-default-skin" preload="auto" width="480" height="198"
+          poster="http://video-js.zencoder.com/oceans-clip.png">
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
           <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
         </video>
       </td>
       <td colspan="2">
         <video id="vid3" class="video-js vjs-default-skin" preload="auto" width="480" height="198">
+          <source src="http://www.youtube.com/watch?v=YjaZNYSt7o0" type='video/youtube'>
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
           <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
         </video>
@@ -90,10 +95,10 @@
         <div id="h5swf_events"></div>
       </td>
       <td class="info-col">
-        <table id="flowplayer_props" border="0" cellspacing="0" cellpadding="0"></table>
+        <table id="youtube_props" border="0" cellspacing="0" cellpadding="0"></table>
       </td>
       <td class="info-col">
-        <div id="flowplayer_events"></div>
+        <div id="youtube_events"></div>
       </td>
     </tr>
   </table>
