--- a/dev/dev.html
+++ b/dev/dev.html
@@ -47,9 +47,13 @@
 </head>
 <body>
 
-  <video id="vid1" class="video-js vjs-default-skin" autoplay preload="none" width="640" height="264" 
-      poster="http://video-js.zencoder.com/oceans-clip.png"
-      data-setup='{"techOrder":["html5","h5swf","youtube"]}'>
+  <video src="http://video-js.zencoder.com/oceans-clip.mp4" id="vid1" class="video-js vjs-default-skin" autoplay preload="auto" width="640" height="264"
+      poster="http://video-js.zencoder.com/oceans-clip.png"></video>
+  
+
+  <video id="vid1" class="video-js vjs-default-skin" autoplay preload="auto" width="640" height="264"
+      poster="http://video-js.zencoder.com/oceans-clip.png">
+      <!-- data-setup='{"techOrder":["html5","h5swf","youtube"]}'> -->
     <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
     <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
     <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg; codecs="theora, vorbis"'>
