--- a/dev/compare/compare.html
+++ b/dev/compare/compare.html
@@ -59,22 +59,21 @@
     <tr><th colspan="2">HTML5</th><th colspan="2">H5Swf</th><th colspan="2">YouTube</th></tr>
     <tr>
       <td colspan="2">
-        <video id="vid1" class="video-js vjs-default-skin" preload="none" width="480" height="198"
-          poster="http://video-js.zencoder.com/oceans-clip.png"
-          >
-          <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
-          <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
-        </video>
-      </td>
-      <td colspan="2">
-        <video id="vid2" class="video-js vjs-default-skin" preload="none" width="480" height="198"
+        <video id="vid1" class="video-js vjs-default-skin" controls preload="none" width="480" height="198"
           poster="http://video-js.zencoder.com/oceans-clip.png">
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
           <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
         </video>
       </td>
       <td colspan="2">
-        <video id="vid3" class="video-js vjs-default-skin" preload="none" width="480" height="198">
+        <video id="vid2" class="video-js vjs-default-skin" controls preload="none" width="480" height="198"
+          poster="http://video-js.zencoder.com/oceans-clip.png">
+          <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
+          <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
+        </video>
+      </td>
+      <td colspan="2">
+        <video id="vid3" class="video-js vjs-default-skin" controls preload="none" width="480" height="198">
           <source src="http://www.youtube.com/watch?v=YjaZNYSt7o0" type='video/youtube'>
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
           <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
