--- a/dev/compare/compare.html
+++ b/dev/compare/compare.html
@@ -62,14 +62,14 @@
         <video id="vid1" class="video-js vjs-default-skin" controls preload="none" width="480" height="198"
           poster="http://video-js.zencoder.com/oceans-clip.png">
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
-          <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
+          <!-- <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'> -->
         </video>
       </td>
       <td colspan="2">
         <video id="vid2" class="video-js vjs-default-skin" controls preload="none" width="480" height="198"
           poster="http://video-js.zencoder.com/oceans-clip.png">
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
-          <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
+          <!-- <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'> -->
         </video>
       </td>
       <td colspan="2">
