--- a/dev/dev.html
+++ b/dev/dev.html
@@ -19,6 +19,8 @@
 
   <script src="src/log.js"></script>
 
+  <script src="src/ui.js"></script>
+
   <script src="src/api.js"></script>
   <script src="src/events.js"></script>
 
@@ -47,7 +49,7 @@
 </head>
 <body>
 
-  <video id="vid1" class="video-js vjs-default-skin" autoplay preload="auto" width="640" height="264"
+  <video id="vid1" class="video-js vjs-default-skin" controls preload="none" width="640" height="264"
       poster="http://video-js.zencoder.com/oceans-clip.png"
       data-setup='{"techOrder":["html5","h5swf","youtube"]}'>
     <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
