MAJOR REFACTOR: Restrcutured code into class-based components. Setup and configuring should still work the same, but controls and tech elements are now sub-classes for Component, which builds elements and applies event behaviors. Removed demo source code from repository root. Was receiving pull requests for the release files instead of source files. This makes it more clear where to make changes.

--- a/compare/compare.html
+++ b/compare/compare.html
@@ -24,15 +24,17 @@
   <script src="../src/events.js" type="text/javascript" charset="utf-8"></script>
 
   <script src="../src/tracks.js" type="text/javascript" charset="utf-8"></script>
+  
+  <script src="../src/components.js" type="text/javascript" charset="utf-8"></script>
 
   <script src="../src/behaviors/behaviors.js" type="text/javascript" charset="utf-8"></script>
   <script src="../src/behaviors/seekBar.js" type="text/javascript" charset="utf-8"></script>
   <script src="../src/behaviors/volume.js" type="text/javascript" charset="utf-8"></script>
   <script src="../src/behaviors/texttrackdisplays.js" type="text/javascript" charset="utf-8"></script>
 
-  <script src="../src/controls/bigPlay.js" type="text/javascript" charset="utf-8"></script>
+  <!-- <script src="../src/controls/bigPlay.js" type="text/javascript" charset="utf-8"></script>
   <script src="../src/controls/bar.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/controls/subtitlesBox.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../src/controls/subtitlesBox.js" type="text/javascript" charset="utf-8"></script> -->
 
   <script src="../src/tech/html5.js" type="text/javascript" charset="utf-8"></script>
   <script src="../src/tech/flowplayer.js" type="text/javascript" charset="utf-8"></script>
