--- a/dev.html
+++ b/dev.html
@@ -10,39 +10,17 @@
     <script src="https://getfirebug.com/releases/lite/1.3/firebug-lite.js"></script>
   <!--<![endif]-->
 
-  <!-- <script src="dist/video.js"></script> -->
-
   <script src="src/core.js"></script>
   <script src="src/lib.js"></script>
   <script src="src/ecma.js"></script>
   <script src="src/json.js"></script>
 
-  <script src="src/log.js"></script>
-
-  <script src="src/ui.js"></script>
-
-  <script src="src/api.js"></script>
+  <script src="src/component.js"></script>
+  <script src="src/player.js"></script>
+  <script src="src/tech.js"></script>
+  <script src="src/controls.js"></script>
   <script src="src/events.js"></script>
-
   <script src="src/tracks.js"></script>
-
-  <script src="src/behaviors/behaviors.js"></script>
-  <script src="src/behaviors/seekBar.js"></script>
-  <script src="src/behaviors/volume.js"></script>
-  <script src="src/behaviors/texttrackdisplays.js"></script>
-
-  <script src="src/controls/bigPlay.js"></script>
-  <script src="src/controls/bar.js"></script>
-  <script src="src/controls/subtitlesBox.js"></script>
-
-  <script src="src/tech/html5.js"></script>
-  <script src="src/tech/flowplayer.js"></script>
-
-  <script src="src/tech/h5swf.js"></script>
-
-  <script src="src/tech/youtube.js"></script>
-
-  <script src="src/autoload.js"></script>
 
   <script src="flash/swfobject.js"></script>
 
@@ -51,13 +29,13 @@
 
   <video id="vid1" class="video-js vjs-default-skin" controls preload="none" width="640" height="264"
       poster="http://video-js.zencoder.com/oceans-clip.png"
-      data-setup='{"techOrder":["html5","h5swf","youtube"]}'>
+      data-setup='{}'>
     <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
     <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
     <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg; codecs="theora, vorbis"'>
     <source src="http://pseudo01.hddn.com/vod/demo.flowplayervod/flowplayer-700.flv" type='video/flv'>
     <source src="http://www.youtube.com/watch?v=YjaZNYSt7o0&feature=related" type='video/youtube'>
-    <!-- <track kind="subtitles" src="http://videojs.com/subtitles/demo-subtitles.srt" srclang="en-US" label="English"></track> -->
+    <track kind="subtitles" src="http://videojs.com/subtitles/demo-subtitles.srt" srclang="en-US" label="English"></track>
     <!-- <track kind="subtitles" src="demo-subtitles.srt" srclang="en-US" label="English"></track> -->
   </video>
 
