Fixed some IE comma errors. Made ajax error clearer. Fixed a setup issue.

--- a/dev.html
+++ b/dev.html
@@ -37,6 +37,7 @@
     <source src="http://www.youtube.com/watch?v=YjaZNYSt7o0&feature=related" type='video/youtube'>
     <track kind="subtitles" src="http://videojs.com/subtitles/demo-subtitles.srt" srclang="en-US" label="English"></track>
     <!-- <track kind="subtitles" src="demo-subtitles.srt" srclang="en-US" label="English"></track> -->
+    <p>Video Playback Not Supported</p>
   </video>
 
   <script>
