--- a/compare/compare.html
+++ b/compare/compare.html
@@ -15,50 +15,30 @@
     <script src="https://getfirebug.com/firebug-lite.js" type="text/javascript" charset="utf-8"></script>
   <![endif]-->
 
-  <script src="../src/core.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/lib.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/ecma.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/json.js" type="text/javascript" charset="utf-8"></script>
 
-  <script src="../src/api.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/events.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../src/core.js"></script>
+  <script src="../src/lib.js"></script>
+  <script src="../src/ecma.js"></script>
+  <script src="../src/json.js"></script>
 
-  <script src="../src/tracks.js" type="text/javascript" charset="utf-8"></script>
-  
-  <script src="../src/components.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../src/component.js"></script>
+  <script src="../src/player.js"></script>
+  <script src="../src/tech.js"></script>
+  <script src="../src/controls.js"></script>
+  <script src="../src/events.js"></script>
+  <script src="../src/tracks.js"></script>
 
-  <script src="../src/behaviors/behaviors.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/behaviors/seekBar.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/behaviors/volume.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/behaviors/texttrackdisplays.js" type="text/javascript" charset="utf-8"></script>
-
-  <!-- <script src="../src/controls/bigPlay.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/controls/bar.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/controls/subtitlesBox.js" type="text/javascript" charset="utf-8"></script> -->
-
-  <script src="../src/tech/html5.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/tech/flowplayer.js" type="text/javascript" charset="utf-8"></script>
-
-  <script src="../src/autoload.js" type="text/javascript" charset="utf-8"></script>
-
-  <script src="../src/log.js" type="text/javascript" charset="utf-8"></script>
-
-
-  <script src="../src/tech/h5swf.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../src/tech/youtube.js" type="text/javascript" charset="utf-8"></script>
-
+  <script src="../flash/swfobject.js"></script>
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script type="text/javascript" src="../flash/swfobject.js"></script>
-
 
 	<link rel="stylesheet" href="compare.css" type="text/css">
 	<script type="text/javascript" src="compare.js"></script>
 </head>
 <body>
-
+<div id="main">
   <table border="0" cellspacing="5" cellpadding="5">
-    <tr><th colspan="2">HTML5</th><th colspan="2">H5Swf</th><th colspan="2">YouTube</th></tr>
+    <tr><th colspan="2">HTML5</th><th colspan="2">H5Swf</th></tr>
     <tr>
       <td colspan="2">
         <video id="vid1" class="video-js vjs-default-skin" controls preload="auto" width="480" height="198"
@@ -72,13 +52,6 @@
           poster="http://video-js.zencoder.com/oceans-clip.png">
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
           <!-- <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'> -->
-        </video>
-      </td>
-      <td colspan="2">
-        <video id="vid3" class="video-js vjs-default-skin" controls preload="none" width="480" height="198">
-          <source src="http://www.youtube.com/watch?v=YjaZNYSt7o0" type='video/youtube'>
-          <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
-          <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
         </video>
       </td>
     </tr>
@@ -95,14 +68,8 @@
       <td class="info-col">
         <div id="h5swf_events"></div>
       </td>
-      <td class="info-col">
-        <table id="youtube_props" border="0" cellspacing="0" cellpadding="0"></table>
-      </td>
-      <td class="info-col">
-        <div id="youtube_events"></div>
-      </td>
     </tr>
   </table>
-
+</div>
 </body>
 </html>
