Changed h5swf name to just Flash for ease of use. And lowercased tech object names.

--- a/compare/compare.html
+++ b/compare/compare.html
@@ -38,7 +38,7 @@
 <body>
 <div id="main">
   <table border="0" cellspacing="5" cellpadding="5">
-    <tr><th colspan="2">HTML5</th><th colspan="2">H5Swf</th></tr>
+    <tr><th colspan="2">HTML5</th><th colspan="2">Flash</th></tr>
     <tr>
       <td colspan="2">
         <video id="vid1" class="video-js vjs-default-skin" controls preload="auto" width="480" height="198"
@@ -63,10 +63,10 @@
         <div id="html5_events"></div>
       </td>
       <td class="info-col">
-        <table id="h5swf_props" border="0" cellspacing="0" cellpadding="0"></table>
+        <table id="flash_props" border="0" cellspacing="0" cellpadding="0"></table>
       </td>
       <td class="info-col">
-        <div id="h5swf_events"></div>
+        <div id="flash_events"></div>
       </td>
     </tr>
   </table>
