--- a/test/test.html
+++ b/test/test.html
@@ -20,6 +20,7 @@
   <script src='../src/player.js'></script>
   <script src='../src/tech.js'></script>
   <script src='../src/tracks.js'></script>
+  <script src='../src/resolutions.js'></script>
 
   <script src='../tech/html5/html5.js'></script>
   <script src='../tech/flash/flash.js'></script>
@@ -46,7 +47,7 @@
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
   <div id="qunit-fixture">test markup</div>
-  
+
   <div id="player_box"></div>
 </body>
 </html>
