--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         player = new YT.Player('player', {
           height: '390',
           width: '640',
-          videoId: 'u1zgFlCw8Aw',
+          videoId: 'u1zgFlCw8Aw', //Replace With Video ID
           events: {
             'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange
