--- a/test/index.html
+++ b/test/index.html
@@ -37,7 +37,7 @@
         'test/unit/flash.js',
         'test/unit/api.js',
         'test/unit/menu.js',
-        'test/unit/tracks.js'
+        'test/unit/tracks/tracks.js'
       ];
 
       var projectRoot = '../';
