add TextTrackList unit tests

--- a/test/index.html
+++ b/test/index.html
@@ -37,7 +37,8 @@
         'test/unit/flash.js',
         'test/unit/api.js',
         'test/unit/menu.js',
-        'test/unit/tracks/tracks.js'
+        'test/unit/tracks/tracks.js',
+        'test/unit/tracks/text-track-list.js'
       ];
 
       var projectRoot = '../';
