TextTrack tests. Always return activeCues TextTrackCueList from the getter. Have a no-op set function for all read-only properties.

--- a/test/index.html
+++ b/test/index.html
@@ -38,6 +38,7 @@
         'test/unit/api.js',
         'test/unit/menu.js',
         'test/unit/tracks/tracks.js',
+        'test/unit/tracks/text-track.js',
         'test/unit/tracks/text-track-list.js',
         'test/unit/tracks/text-track-cue-list.js'
       ];
