Remove extra div. Add styles. The test fixture is created in the globals shim now so remove the inline element. Add the default video.js styles to the page until we turn on the script-based injection.

--- a/test/index.html
+++ b/test/index.html
@@ -4,13 +4,12 @@
   <meta charset="utf-8">
   <title>VideoJS Tests</title>
   <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
+  <link rel="stylesheet" href="../build/temp/video-js.min.css">
 </head>
 <body>
   <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
   <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
-  <script>
-  </script>
   <script src="../build/temp/tests.js"></script>
+  <script src="api/api.js"></script>
 </body>
 </html>
