--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,12 @@
 <body>
   <div id="qunit"></div>
   <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
+
+  <!-- Execute the bundled tests first -->
   <script src="../build/temp/tests.js"></script>
+
+  <!-- Include the video.js globals to run the API tests against -->
+  <script src="../build/temp/video.min.js"></script>
   <script src="api/api.js"></script>
 </body>
 </html>
