Remove type from script tag

--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="qunit"></div>
   <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
-  <script type="text/javascript">
+  <script>
     var log = [];
     var testName;
     QUnit.testStart(function (testDetails) {
