--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,8 @@
   <div id="qunit"></div>
   <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
 
+  <script src="../build/temp/ie8/videojs-ie8.min.js"></script>
+
   <!-- Execute the bundled tests first -->
   <script src="../build/temp/tests.js"></script>
 
